--- a/src/index.html
+++ b/src/index.html
@@ -247,7 +247,7 @@
           <% for (var i = 36; i > 8; i -= 4) { %>
             <li class="color-primary">
               <span class="color-second text-<%= i %>">
-                --text-<span data-number="<%= i %>" data-number-step="1" data-number-time="2">0</span>
+                --text-<span data-number="<%= i %>" data-number-step="1" data-number-time="2" data-number-fixed="0">0</span>
               </span>
             </li>
           <% } %>
