--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,10 @@
         <img class="image image--sd" src="img/pictures/logo-main.png" alt="">
       </picture>
     </div>
-    <h1 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-3 mb-md-6 ease-in-out duration-4 delay-2 anim anim--up" data-movement="blend" data-anim="hidden">SEAFOOD EXPO EURASIA <br class="d-none d-md-block">DECEMBER 7-9, 2023</h1>
-    <h3 class="text text--center text-14 text-md-16 bold-7 lh-2 mb-10 ease-in-out duration-4 delay-4 anim anim--up" data-movement="blend" data-anim="hidden">Istanbul, Tuyap</h3>
+    <h1 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-3 mb-md-6 ease-in-out duration-4 delay-2 anim anim--up" data-movement="blend" data-anim="hidden">SEAFOOD EXPO EURASIA <br class="d-none d-md-block">7-9 ARALIK 2023</h1>
+    <h3 class="text text--center text-14 text-md-16 bold-7 lh-2 mb-10 ease-in-out duration-4 delay-4 anim anim--up" data-movement="blend" data-anim="hidden">Istanbul</h3>
     <div class="w-100 ease-in-out duration-4 delay-6 anim anim--up" data-anim="hidden">
-      <button class="main__btn btn btn--primary btn--lg btn--fill w-100 mx-auto" data-bubbles="hidden" data-fancybox-dialog data-type="ajax" data-src="dialogs/dialog-iframe.html">Book a stand</button>
+      <button class="btn btn--primary btn--lg btn--fill mx-auto" data-bubbles="hidden" data-fancybox-dialog data-type="ajax" data-src="dialogs/dialog-iframe.html">Stand rezervasyonunuzu yaptırın</button>
     </div>
   </div>
 </main>
@@ -42,12 +42,12 @@
   <div class="about__grid grid gap-4 gap-md-7 gap-lg-5">
     <div class="col-12 col-lg-6 row-lg-2 ease-in-out duration-5 anim anim--right" data-anim="hidden">
       <div class="about__block card h-100 py-7 px-5 px-md-7 py-lg-10 px-lg-10" data-movement="blend">
-        <h2 class="font-alt text text--uppercase text-26 text-md-30 text-lg-34 bold-7 lh-3 mb-5 mb-md-8">INTERNATIONAL EXHIBITION FOR FISHERY, PROCESSING AND AQUACULTURE</h2>
+        <h2 class="font-alt text text--uppercase text-26 text-md-30 text-lg-34 bold-7 lh-3 mb-5 mb-md-8">ULUSLARARASI BALIKÇILIK, İŞLEME VE SU VE DENİZ ÜRÜNLERI FUARI</h2>
         <p class="text-14 text-md-16 bold-4 lh-5 mb-5">
-          SEAFOOD EXPO EURASIA is a new event for communication between people involved in fishery business and spheres which are closely related to it. Aimed at bringing fresh thinking towards world fishery community the exhibition will unite fishery, aquaculture, processing, shipbuilding, logistic & packaging companies.
+          SEAFOOD EXPO EURASIA balıkçılık sektörü ve bu sektörle yakın ilişkili alanlarda faaliyet gösteren insanlar arasında iletişim için tasarlanmış yeni bir etkinliktir. Dünya çapında balıkçılık endüstrisi topluluğuna yeni bir düşünce getirmeyi amaçlayan fuar; balıkçılık, su ürünleri, balık işleme, gemi inşaatı, lojistik ve ambalajlama şirketlerini bir araya getirecektir.
         </p>
         <p class="text-14 text-md-16 bold-4 lh-5">
-          The new show is based upon “business beyond politics principle”. Free from political and geographical borders the event is designed to unite the countries of Europe and Asia, Africa and Latin America within one place.
+          İş dünyasında yeni trend "siyasetin ötesinde iş prensiplerine" dayanmaktadır. Siyasi ve coğrafi sınırlardan kurtulmuş olan etkinlik, Avrupa, Asya, Afrika ve Latin Amerika ülkelerini tek bir yerde birleştirme amacıyla tasarlanmıştır.
         </p>
       </div>
     </div>
@@ -69,7 +69,9 @@
           </div>
         </div>
         <div class="about__bg relative color-white h-100 py-10 px-5 px-lg-7">
-          <h3 class="text text--uppercase text-18 text-md-20 text-lg-22 bold-7 lh-5">THE EVENT THAT <br> <span class="color-primary">UNITES</span> CONTINENTS</h3>
+          <h3 class="text text--uppercase text-18 text-md-20 text-lg-22 bold-7 lh-5">
+            KITALARI <span class="color-primary">BİRLEŞTİREN</span> <br> BİR ETKİNLİK
+          </h3>
         </div>
       </div>
     </div>
@@ -84,7 +86,7 @@
           </div>
         </div>
         <div class="relative color-light h-100 py-5 px-5 py-lg-10 px-lg-7">
-          <h3 class="text text--uppercase text-12 text-md-20 text-lg-22 bold-7 lh-5">perfect platform to promote new products</h3>
+          <h3 class="text text--uppercase text-12 text-md-20 text-lg-22 bold-7 lh-5">YENİ ÜRÜNLERİ TANITIMI İÇİN MÜKEMMEL BİR PLATFORM</h3>
         </div>
       </div>
     </div>
@@ -113,63 +115,63 @@
     bg: 'blue',
     img: '1',
     color: 'white',
-    title: 'Aquaculture',
+    title: 'SU ÜRÜNLERİ <br> YETİŞTİRİCİLİĞİ',
     item: 'bg-akva color-white',
-    items: ['equipment', 'farming technologies']
+    items: ['EKİPMAN', 'TARIM TEKNOLOJİLERİ']
   },
   {
     bg: 'grey',
     img: '2',
     color: 'black',
-    title: 'Catching <br> and processing',
+    title: 'YAKALAMA <br> VE İŞLEME',
     item: 'bg-primary color-white',
-    items: ['LEADING COMPANIES', 'BEST PROCESSING PRACTICIES']
+    items: ['LİDER ŞİRKETLER', 'EN İYİ İŞLEME UYGULAMALARI']
   },
   {
     bg: 'black',
     img: '3',
     color: 'white',
-    title: 'SHIPBUILDING <br> AND SHIP REPAIR',
+    title: 'GEMİ YAPIMI <br> VE GEMİ ONARIMI',
     item: 'bg-white color-black',
-    items: ['SHIP YARD', 'ENGINEERING BUREAU']
+    items: ['TERSANE', 'MÜHENDİSLİK FİRMASI']
   },
   {
     bg: 'blue',
     img: '4',
     color: 'white',
-    title: 'Equipment <br> & Components',
+    title: 'EKİPMANLAR <br> & BİLEŞENLER',
     item: 'bg-akva color-white',
-    items: ['Packaging', 'Refrigeration']
+    items: ['AMBALAJ', 'SOĞUTMA']
   },
   {
     bg: 'white',
     img: '5',
     color: 'black',
-    title: 'PRODUCT <br> DISTRIBUTION',
+    title: 'ÜRÜN <br> DAĞITIMI',
     item: 'bg-primary color-white',
-    items: ['TRADING', 'RETAIL']
+    items: ['ALIM SATIM', 'PERAKENDE SATIŞ']
   },
   {
     bg: 'black',
     img: '6',
     color: 'white',
-    title: 'Deep Processed <br> Products',
+    title: 'DERİN İŞLENMİŞ <br> ÜRÜNLER',
     item: 'bg-white color-black',
-    items: ['Canned products', 'Ready-to-cook']
+    items: ['KONSERVE ÜRÜNLER', 'PİŞİRMEYE HAZIR']
   },
   {
     bg: 'blue',
     img: '7',
     color: 'white',
-    title: 'LOGISTICS <br> AND STORAGE',
+    title: 'LOJİSTİK <br> VE DEPOLAMA',
     item: 'bg-akva color-white',
-    items: ['Cargo shipping', 'Storage']
+    items: ['KARGO TAŞIMACILIĞI', 'LİMANLAR']
   }
 ] %>
 
 <section class="expo container gradient flex flex-column align-center justify-center overflow-hidden">
   <h2 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-4 ease-in-out duration-4 anim anim--up" data-movement="blend" data-anim="hidden">SEAFOOD EXPO EURASIA</h2>
-  <h3 class="text text--center text--uppercase text-14 text-md-16 bold-7 lh-3 mb-7 mb-md-10 ease-in-out duration-4 anim anim--up" data-movement="blend" data-anim="hidden">December 7-9, 2023, Istanbul, Tuyap</h3>
+  <h3 class="text text--center text--uppercase text-14 text-md-16 bold-7 lh-3 mb-7 mb-md-10 ease-in-out duration-4 anim anim--up" data-movement="blend" data-anim="hidden">7-9 ARALIK 2023, İstanbul</h3>
   <div class="expo-slider relative w-100 pt-lg-5 ease-in-out duration-4 anim anim--left" data-anim="hidden">
     <div class="expo-swiper swiper swiper--overwrap overflow-visible">
       <div class="swiper-wrapper">
@@ -213,9 +215,9 @@
 <section class="platform container bg-grey py-10">
   <div class="ease-in-out duration-4 delay-3 anim anim--down" data-anim="hidden">
     <div class="card py-6 px-5 py-lg-8 px-lg-8" data-movement="blend">
-      <h2 class="font-alt text text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-4">global platform</h2>
+      <h2 class="font-alt text text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-4">KÜRESEL PLATFORM</h2>
       <p class="text-14 text-md-16 bold-4 lh-5">
-        The exposition of 20,000 sqm will be arranged in two halls subject to the product groups presented by exhibitors, which will make it logical and convenient for visitors and thus enhance the efficiency of communication onsite.
+        20.000 metrekarelik fuar alanı, fuar katılımcılarının sunduğu ürün gruplarına göre iki salon olarak düzenlenecek ve böylece ziyaretçilerin aradığını bulmaları kolaylaşacak ve fuar alanında iletişim verimliliği artırılacaktır.
       </p>
     </div>
   </div>
@@ -226,21 +228,21 @@
 <% var show = [
   {
     item: '',
-    title: 'VENUE',
-    subtitle: '20 000 м<sup>2</sup>',
-    text: 'of exhibition space'
+    title: 'MEKAN',
+    subtitle: '20 000 metrekare',
+    text: 'fuar alanı'
   },
   {
     item: 'delay-lg-2',
-    title: 'PARTICIPANTS',
-    subtitle: '120+countries',
-    text: 'Representatives of 120+ countriesare expected to take part in the event'
+    title: 'KATILIMCILAR',
+    subtitle: '120’den fazla ülke',
+    text: 'Etkinliğe 120\'den fazla ülkeden temsilcinin katılması beklenmektedir'
   },
   {
     item: 'delay-lg-4',
-    title: 'proficient target audience',
+    title: 'UZMAN HEDEF KİTLE',
     subtitle: '46%',
-    text: 'of visitors are business owners, CEO and top managers'
+    text: 'Ziyaretçilerin %46\'sı işletme sahibi, CEO ve üst düzey yöneticilerden oluşmaktadır'
   }
 ] %>
 
@@ -261,7 +263,7 @@
     </div>
   </div>
   <div class="flex flex-column align-center justify-center relative color-white">
-    <h2 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-7 mb-md-10 ease-in-out duration-4 anim anim--up" data-anim="hidden" data-movement="blend">NEW SHOW FOR THE WHOLE WORLD COMMUNITY</h2>
+    <h2 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-7 mb-md-10 ease-in-out duration-4 anim anim--up" data-anim="hidden" data-movement="blend">TÜM DÜNYA TOPLULUKLARI İÇİN YENİ BİR GÖSTERİ</h2>
     <div class="grid gap-4 gap-md-6 gap-lg-8 w-100 pt-lg-5">
       <% for (var i = 0; i < show.length; i++) { %>
         <div class="col-12 col-lg-4 <%= show[i].item %> ease duration-4 anim anim--right" data-anim="hidden">
@@ -281,9 +283,9 @@
 <section class="business container bg-grey py-10">
   <div class="ease-in-out duration-4 delay-3 anim anim--down" data-anim="hidden">
     <div class="card py-6 px-5 py-lg-8 px-lg-8" data-movement="blend">
-      <h2 class="font-alt text text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-4">IN SAKE OF BUSINESS</h2>
+      <h2 class="font-alt text text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-4">Her şey iş için</h2>
       <p class="text-14 text-md-16 bold-4 lh-5">
-        SEAFOOD EXPO EURASIA welcomes both renowned industry leaders and ambitious new names to stimulate an open dialogue and provide enormous opportunities for business growth.
+        SEAFOOD EXPO EURASIA, açık diyaloğu teşvik etmek ve işlerini büyütmek için büyük fırsatlar sunmak amacıyla hem tanınmış sektör liderlerini hem de iddialı yeni isimleri ağırlamaktadır.
       </p>
     </div>
   </div>
@@ -319,7 +321,7 @@
 ] %>
 
 <section class="exhibit container flex flex-column align-center justify-center" id="exhibit">
-  <h2 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-7 mb-md-10 ease-in-out duration-4 anim anim--up" data-movement="blend" data-anim="hidden">WHY PARTICIPATE IN SEAFOOD EXPO Eurasia?</h2>
+  <h2 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-7 mb-md-10 ease-in-out duration-4 anim anim--up" data-movement="blend" data-anim="hidden">SEAFOOD EXPO EURASIA FUARINA NEDEN KATILMALISINIZ?</h2>
   <div class="grid gap-4 gap-md-6 gap-lg-8 w-100 py-lg-10">
     <% for (var i = 0; i < exhibit.length; i++) { %>
       <div class="col-12 col-lg-6 <%= exhibit[i].item %> ease-in-out duration-4 anim anim--up" data-anim="hidden">
@@ -373,7 +375,7 @@
 ] %>
 
 <section class="visit container flex flex-column align-center justify-center bg-grey pb-0" id="visit">
-  <h2 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-7 mb-md-10 ease-in-out duration-4 anim anim--up" data-movement="blend" data-anim="hidden">VISITING SEAFOOD EXPO EURASIA YOU CAN:</h2>
+  <h2 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-7 mb-md-10 ease-in-out duration-4 anim anim--up" data-movement="blend" data-anim="hidden">SEAFOOD EXPO EURASIA FUARINI ZİYARET EDEREK YAPABİLECEKLERİNİZ:</h2>
   <div class="grid gap-3 gap-md-5 gap-lg-7 w-100">
     <% for (var i = 0; i < visit.length; i++) { %>
       <div class="col-12 col-md-6 col-lg-4 <%= visit[i].item %> ease-in-out duration-4 anim anim--up" data-anim="hidden">
@@ -410,20 +412,20 @@
       </div>
       <div class="col-12 col-lg-6 ease-in-out duration-4 anim anim--left" data-anim="hidden">
         <div class="card-content py-5 pl-4 pr-4 py-lg-0 pl-lg-0 pr-lg-10" data-movement="blend">
-          <h3 class="text text--uppercase text-18 text-md-20 text-lg-22 bold-7 lh-5 mb-3">Tüyap Fair and Congress Center, Pavilions 11, 12</h3>
+          <h3 class="text text--uppercase text-18 text-md-20 text-lg-22 bold-7 lh-5 mb-3">Tüyap Fair and Congress Center, 11., 12. PAVYONLAR</h3>
           <p class="text-14 text-md-16 bold-4 lh-5 mb-5">Cumhuriyet Mahallesi, Eski Hadimkoy Yolu Caddesi No: 9/1 Buyukcekmece, Istanbul</p>
-          <h4 class="text-16 text-md-18 text-lg-20 bold-7 lh-5 mb-5">Opening hours for visitors:</h4>
+          <h4 class="text-16 text-md-18 text-lg-20 bold-7 lh-5 mb-5">Ziyaretçiler için çalışma saatleri:</h4>
           <div class="flex flex-column gap-3">
             <div class="events__item flex align-center pb-3">
-              <span class="flex-grow text-14 text-md-16 bold-4 fade-60 mr-5">December 7</span>
+              <span class="flex-grow text-14 text-md-16 bold-4 fade-60 mr-5">7 Aralık</span>
               <span class="flex-grow text-14 text-md-16 bold-4">10:00 - 18:00</span>
             </div>
             <div class="events__item flex align-center pb-3">
-              <span class="flex-grow text-14 text-md-16 bold-4 fade-60 mr-5">December 7</span>
+              <span class="flex-grow text-14 text-md-16 bold-4 fade-60 mr-5">8 Aralık</span>
               <span class="flex-grow text-14 text-md-16 bold-4">10:00 - 18:00</span>
             </div>
             <div class="events__item flex align-center pb-3">
-              <span class="flex-grow text-14 text-md-16 bold-4 fade-60 mr-5">December 7</span>
+              <span class="flex-grow text-14 text-md-16 bold-4 fade-60 mr-5">9 Aralık</span>
               <span class="flex-grow text-14 text-md-16 bold-4">10:00 - 18:00</span>
             </div>
           </div>
