--- a/src/index.html
+++ b/src/index.html
@@ -424,7 +424,6 @@
               <span class="flex-grow text-14 text-md-16 bold-4 fade-60 mr-5">8 Aralık</span>
               <span class="flex-grow text-14 text-md-16 bold-4">10:00 - 18:00</span>
             </div>
-            <div class="events__item flex align-center pb-3">
               <span class="flex-grow text-14 text-md-16 bold-4 fade-60 mr-5">9 Aralık</span>
               <span class="flex-grow text-14 text-md-16 bold-4">10:00 - 18:00</span>
             </div>
@@ -432,6 +431,45 @@
         </div>
       </div>
     </div>
+  </div>
+</section>
+
+<!-- Партнеры -->
+
+<section class="partners container flex flex-column align-center justify-center relative bg-grey overflow-hidden">
+  <h2 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-4 ease-in-out duration-4 anim anim--up" data-movement="blend" data-anim="hidden">DESTEKÇİ KURUMLARI</h2>
+  <div class="grid gap-3 gap-lg-7 w-100 mb-10">
+    <% for (var i = 0; i < 3; i++) { %>
+      <div class="col-6 col-lg-4 ease duration-4 anim anim--right" data-anim="hidden">
+        <div class="partners__card card link radius-6 h-100 py-5 px-3 px-md-6">
+          <div class="card-content align-center justify-center">
+            <div class="pack pack--half radius-6 w-100">
+              <picture>
+                <source srcset="img/pictures/logo.webp" type="image/webp">
+                <img class="image image--sd" loading="lazy" src="img/pictures/logo.png" alt="">
+              </picture>
+            </div>
+            <h3 class="text text--uppercase text-18 text-md-20 text-lg-22 bold-7 lh-5 mt-6">Title</h3>
+          </div>
+        </div>
+      </div>
+    <% } %>
+  </div>
+  <div class="grid gap-3 gap-lg-7 w-100">
+    <% for (var i = 0; i < 8; i++) { %>
+      <div class="col-6 col-lg-3 ease duration-4 anim anim--right" data-anim="hidden">
+        <div class="card link radius-6 h-100 py-5 px-3 px-md-6">
+          <div class="card-content align-center justify-center">
+            <div class="pack pack--half radius-6 w-100">
+              <picture>
+                <source srcset="img/pictures/logo.webp" type="image/webp">
+                <img class="image image--sd" loading="lazy" src="img/pictures/logo.png" alt="">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% } %>
   </div>
 </section>
 
