--- a/src/index.html
+++ b/src/index.html
@@ -436,7 +436,7 @@
 
 <!-- Партнеры -->
 
-<section class="partners container flex flex-column align-center justify-center relative bg-grey overflow-hidden">
+<section class="partners container flex flex-column align-center justify-center relative bg-grey overflow-hidden" data-listing="4">
   <h2 class="font-alt text text--center text--uppercase text-26 text-md-30 text-lg-36 bold-7 lh-3 mb-4 ease-in-out duration-4 anim anim--up" data-movement="blend" data-anim="hidden">DESTEKÇİ KURUMLARI</h2>
   <div class="grid gap-3 gap-lg-7 w-100 mb-10">
     <% for (var i = 0; i < 3; i++) { %>
@@ -457,7 +457,7 @@
   </div>
   <div class="grid gap-3 gap-lg-7 w-100">
     <% for (var i = 0; i < 8; i++) { %>
-      <div class="col-6 col-lg-3 ease duration-4 anim anim--right" data-anim="hidden">
+      <div class="<%= i > 3 ? 'd-none' : '' %> col-6 col-lg-3 ease duration-4 anim anim--right" data-anim="hidden" <%= i > 3 ? 'data-listing-item' : '' %>>
         <div class="card link radius-6 h-100 py-5 px-3 px-md-6">
           <div class="card-content align-center justify-center">
             <div class="pack pack--half radius-6 w-100">
@@ -470,6 +470,9 @@
         </div>
       </div>
     <% } %>
+  </div>
+  <div class="ease duration-4 anim anim--right" data-anim="hidden">
+    <button class="btn btn--primary btn--lg btn--fill mt-10" data-listing-show>Показать ещё</button>
   </div>
 </section>
 
